# sha1

./: CMakeLists.txt  README.md  hash_enc.cpp  hash_enc.h  hash_enc_def.h  hash_enc_linux_support.cpp  hash_enc_linux_support.h  main.cpp
.github/workflows/: cmake.yml
